[GOHW-3]: use cache and db in facade; add get one movie method
