# pkg/api/api.pb.go
@@ -340,6 +340,101 @@ func (x *MovieDeleteRequest) GetId() uint64 {
 	return 0
 }
 
+// MovieGetOne endpoint messages
+type MovieGetOneRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id uint64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+}
+
+func (x *MovieGetOneRequest) Reset() {
+	*x = MovieGetOneRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *MovieGetOneRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*MovieGetOneRequest) ProtoMessage() {}
+
+func (x *MovieGetOneRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use MovieGetOneRequest.ProtoReflect.Descriptor instead.
+func (*MovieGetOneRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *MovieGetOneRequest) GetId() uint64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+type MovieGetOneResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Movie *Movie `protobuf:"bytes,1,opt,name=movie,proto3" json:"movie,omitempty"`
+}
+
+func (x *MovieGetOneResponse) Reset() {
+	*x = MovieGetOneResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_proto_msgTypes[7]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *MovieGetOneResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*MovieGetOneResponse) ProtoMessage() {}
+
+func (x *MovieGetOneResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_msgTypes[7]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use MovieGetOneResponse.ProtoReflect.Descriptor instead.
+func (*MovieGetOneResponse) Descriptor() ([]byte, []int) {
+	return file_api_proto_rawDescGZIP(), []int{7}
+}
+
+func (x *MovieGetOneResponse) GetMovie() *Movie {
+	if x != nil {
+		return x.Movie
+	}
+	return nil
+}
+
 var File_api_proto protoreflect.FileDescriptor
 
 var file_api_proto_rawDesc = []byte{
@@ -372,38 +467,53 @@ var file_api_proto_rawDesc = []byte{
 	0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x52, 0x05,
 	0x6d, 0x6f, 0x76, 0x69, 0x65, 0x22, 0x24, 0x0a, 0x12, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x44, 0x65,
 	0x6c, 0x65, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69,
-	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69, 0x64, 0x32, 0xc4, 0x03, 0x0a, 0x05,
-	0x41, 0x64, 0x6d, 0x69, 0x6e, 0x12, 0x66, 0x0a, 0x0b, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x43, 0x72,
-	0x65, 0x61, 0x74, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e,
-	0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76,
-	0x69, 0x65, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75,
-	0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x22,
-	0x09, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x7a, 0x0a,
-	0x09, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x27, 0x2e, 0x6f, 0x7a, 0x6f,
-	0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61,
-	0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x28, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e, 0x68,
-	0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69,
-	0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x14, 0x22, 0x0f, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65,
-	0x73, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x3a, 0x01, 0x2a, 0x12, 0x6d, 0x0a, 0x0b, 0x4d, 0x6f, 0x76,
-	0x69, 0x65, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e,
-	0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1b, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x15, 0x22, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x2f, 0x75,
-	0x70, 0x64, 0x61, 0x74, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x68, 0x0a, 0x0b, 0x4d, 0x6f, 0x76, 0x69,
-	0x65, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64,
+	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69, 0x64, 0x22, 0x24, 0x0a, 0x12, 0x4d,
+	0x6f, 0x76, 0x69, 0x65, 0x47, 0x65, 0x74, 0x4f, 0x6e, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69,
+	0x64, 0x22, 0x49, 0x0a, 0x13, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x47, 0x65, 0x74, 0x4f, 0x6e, 0x65,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x32, 0x0a, 0x05, 0x6d, 0x6f, 0x76, 0x69,
+	0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1c, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64,
 	0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e,
-	0x4d, 0x6f, 0x76, 0x69, 0x65, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x10, 0x2a, 0x0e, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x2f, 0x7b, 0x69,
-	0x64, 0x7d, 0x42, 0x16, 0x5a, 0x14, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2f, 0x70,
-	0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x3b, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x33,
+	0x4d, 0x6f, 0x76, 0x69, 0x65, 0x52, 0x05, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x32, 0xc2, 0x04, 0x0a,
+	0x05, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x12, 0x66, 0x0a, 0x0b, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x43,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76,
+	0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f,
+	0x76, 0x69, 0x65, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62,
+	0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e,
+	0x22, 0x09, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x7a,
+	0x0a, 0x09, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x27, 0x2e, 0x6f, 0x7a,
+	0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e,
+	0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x28, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e,
+	0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76,
+	0x69, 0x65, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x22, 0x0f, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69,
+	0x65, 0x73, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x3a, 0x01, 0x2a, 0x12, 0x6d, 0x0a, 0x0b, 0x4d, 0x6f,
+	0x76, 0x69, 0x65, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e,
+	0x2e, 0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70,
+	0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1b, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x15, 0x22, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x2f,
+	0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x68, 0x0a, 0x0b, 0x4d, 0x6f, 0x76,
+	0x69, 0x65, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e,
+	0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x16, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x10, 0x2a, 0x0e, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x2f, 0x7b,
+	0x69, 0x64, 0x7d, 0x12, 0x7c, 0x0a, 0x0b, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x47, 0x65, 0x74, 0x4f,
+	0x6e, 0x65, 0x12, 0x29, 0x2e, 0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f,
+	0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65,
+	0x47, 0x65, 0x74, 0x4f, 0x6e, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2a, 0x2e,
+	0x6f, 0x7a, 0x6f, 0x6e, 0x2e, 0x64, 0x65, 0x76, 0x2e, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72,
+	0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x47, 0x65, 0x74, 0x4f, 0x6e,
+	0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x10, 0x12, 0x0e, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x2f, 0x7b, 0x69, 0x64,
+	0x7d, 0x42, 0x16, 0x5a, 0x14, 0x68, 0x6f, 0x6d, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x2f, 0x70, 0x6b,
+	0x67, 0x2f, 0x61, 0x70, 0x69, 0x3b, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
 }
 
 var (
@@ -418,32 +528,37 @@ func file_api_proto_rawDescGZIP() []byte {
 	return file_api_proto_rawDescData
 }
 
-var file_api_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_api_proto_msgTypes = make([]protoimpl.MessageInfo, 8)
 var file_api_proto_goTypes = []interface{}{
-	(*Movie)(nil),              // 0: ozon.dev.homework.api.Movie
-	(*MovieCreateRequest)(nil), // 1: ozon.dev.homework.api.MovieCreateRequest
-	(*MovieListRequest)(nil),   // 2: ozon.dev.homework.api.MovieListRequest
-	(*MovieListResponse)(nil),  // 3: ozon.dev.homework.api.MovieListResponse
-	(*MovieUpdateRequest)(nil), // 4: ozon.dev.homework.api.MovieUpdateRequest
-	(*MovieDeleteRequest)(nil), // 5: ozon.dev.homework.api.MovieDeleteRequest
-	(*emptypb.Empty)(nil),      // 6: google.protobuf.Empty
+	(*Movie)(nil),               // 0: ozon.dev.homework.api.Movie
+	(*MovieCreateRequest)(nil),  // 1: ozon.dev.homework.api.MovieCreateRequest
+	(*MovieListRequest)(nil),    // 2: ozon.dev.homework.api.MovieListRequest
+	(*MovieListResponse)(nil),   // 3: ozon.dev.homework.api.MovieListResponse
+	(*MovieUpdateRequest)(nil),  // 4: ozon.dev.homework.api.MovieUpdateRequest
+	(*MovieDeleteRequest)(nil),  // 5: ozon.dev.homework.api.MovieDeleteRequest
+	(*MovieGetOneRequest)(nil),  // 6: ozon.dev.homework.api.MovieGetOneRequest
+	(*MovieGetOneResponse)(nil), // 7: ozon.dev.homework.api.MovieGetOneResponse
+	(*emptypb.Empty)(nil),       // 8: google.protobuf.Empty
 }
 var file_api_proto_depIdxs = []int32{
 	0, // 0: ozon.dev.homework.api.MovieListResponse.movie:type_name -> ozon.dev.homework.api.Movie
 	0, // 1: ozon.dev.homework.api.MovieUpdateRequest.movie:type_name -> ozon.dev.homework.api.Movie
-	1, // 2: ozon.dev.homework.api.Admin.MovieCreate:input_type -> ozon.dev.homework.api.MovieCreateRequest
-	2, // 3: ozon.dev.homework.api.Admin.MovieList:input_type -> ozon.dev.homework.api.MovieListRequest
-	4, // 4: ozon.dev.homework.api.Admin.MovieUpdate:input_type -> ozon.dev.homework.api.MovieUpdateRequest
-	5, // 5: ozon.dev.homework.api.Admin.MovieDelete:input_type -> ozon.dev.homework.api.MovieDeleteRequest
-	6, // 6: ozon.dev.homework.api.Admin.MovieCreate:output_type -> google.protobuf.Empty
-	3, // 7: ozon.dev.homework.api.Admin.MovieList:output_type -> ozon.dev.homework.api.MovieListResponse
-	6, // 8: ozon.dev.homework.api.Admin.MovieUpdate:output_type -> google.protobuf.Empty
-	6, // 9: ozon.dev.homework.api.Admin.MovieDelete:output_type -> google.protobuf.Empty
-	6, // [6:10] is the sub-list for method output_type
-	2, // [2:6] is the sub-list for method input_type
-	2, // [2:2] is the sub-list for extension type_name
-	2, // [2:2] is the sub-list for extension extendee
-	0, // [0:2] is the sub-list for field type_name
+	0, // 2: ozon.dev.homework.api.MovieGetOneResponse.movie:type_name -> ozon.dev.homework.api.Movie
+	1, // 3: ozon.dev.homework.api.Admin.MovieCreate:input_type -> ozon.dev.homework.api.MovieCreateRequest
+	2, // 4: ozon.dev.homework.api.Admin.MovieList:input_type -> ozon.dev.homework.api.MovieListRequest
+	4, // 5: ozon.dev.homework.api.Admin.MovieUpdate:input_type -> ozon.dev.homework.api.MovieUpdateRequest
+	5, // 6: ozon.dev.homework.api.Admin.MovieDelete:input_type -> ozon.dev.homework.api.MovieDeleteRequest
+	6, // 7: ozon.dev.homework.api.Admin.MovieGetOne:input_type -> ozon.dev.homework.api.MovieGetOneRequest
+	8, // 8: ozon.dev.homework.api.Admin.MovieCreate:output_type -> google.protobuf.Empty
+	3, // 9: ozon.dev.homework.api.Admin.MovieList:output_type -> ozon.dev.homework.api.MovieListResponse
+	8, // 10: ozon.dev.homework.api.Admin.MovieUpdate:output_type -> google.protobuf.Empty
+	8, // 11: ozon.dev.homework.api.Admin.MovieDelete:output_type -> google.protobuf.Empty
+	7, // 12: ozon.dev.homework.api.Admin.MovieGetOne:output_type -> ozon.dev.homework.api.MovieGetOneResponse
+	8, // [8:13] is the sub-list for method output_type
+	3, // [3:8] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_api_proto_init() }
@@ -524,6 +639,30 @@ func file_api_proto_init() {
 				return nil
 			}
 		}
+		file_api_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*MovieGetOneRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*MovieGetOneResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -531,7 +670,7 @@ func file_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   8,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
